--- a/dashboard.html
+++ b/dashboard.html
@@ -1,69 +1,4 @@
 
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Admin Dashboard - Satrya Putra Dewantara</title>
-    <!-- Bootstrap CSS -->
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet">
-    <!-- Bootstrap Icons -->
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.2/font/bootstrap-icons.css">
-    <!-- Chart.js -->
-    <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
-    
-    <style>
-        :root {
-            --primary-color: #4e73df;
-            --secondary-color: #858796;
-            --success-color: #1cc88a;
-            --info-color: #36b9cc;
-            --warning-color: #f6c23e;
-            --danger-color: #e74a3b;
-        }
-
-        body {
-            background-color: #f8f9fc;
-            font-family: 'Nunito', sans-serif;
-            overflow-x: hidden;
-        }
-
-        .sidebar {
-            height: 100vh;
-            background: linear-gradient(180deg, var(--primary-color) 0%, #224abe 100%);
-            color: white;
-            position: fixed;
-            transition: all 0.3s;
-            box-shadow: 0 0.15rem 1.75rem 0 rgba(58, 59, 69, 0.15);
-            z-index: 1000;
-        }
-
-        .sidebar .logo {
-            padding: 1.5rem 1rem;
-            text-align: center;
-            border-bottom: 1px solid rgba(255,255,255,0.1);
-        }
-
-        .sidebar a {
-            color: rgba(255,255,255,0.8);
-            text-decoration: none;
-            padding: 1rem 1.5rem;
-            display: flex;
-            align-items: center;
-            transition: all 0.3s;
-        }
-
-        .sidebar a i {
-            margin-right: 0.75rem;
-            font-size: 1.1rem;
-        }
-
-        .sidebar a:hover {
-            color: white;
-            background: rgba(255,255,255,0.1);
-            padding-left: 1.75rem;
-        }
-
         .content-wrapper {
             margin-left: 250px; /* Menyesuaikan margin sesuai dengan lebar sidebar */
             padding: 20px;
@@ -88,8 +23,13 @@
 
     <script>
         // Memuat file CSV dari repositori
-        fetch(Imports.csv') // Ganti 'data.csv' dengan nama file CSV Anda jika berbeda
-            .then(response => response.text())
+        fetch('Imports.csv') // Ganti 'Imports.csv' dengan nama file CSV Anda jika berbeda
+            .then(response => {
+                if (!response.ok) {
+                    throw new Error('Network response was not ok');
+                }
+                return response.text();
+            })
             .then(data => {
                 const rows = data.split('\n').slice(1); // Mengabaikan header jika ada
                 const labels = [];
@@ -97,8 +37,10 @@
 
                 rows.forEach(row => {
                     const cols = row.split(',');
-                    labels.push(cols[0]); // Misalkan kolom pertama adalah label
-                    values.push(parseFloat(cols[1])); // Misalkan kolom kedua adalah nilai
+                    if (cols.length > 1) { // Pastikan ada data untuk diproses
+                        labels.push(cols[0]); // Misalkan kolom pertama adalah label
+                        values.push(parseFloat(cols[1])); // Misalkan kolom kedua adalah nilai
+                    }
                 });
 
                 // Membuat grafik menggunakan Chart.js
